--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "bundledDependencies": [
   ],
-  "license": "Simplified BSD License",
+  "license": "Apache v2 license",
   "engines": {
     "node": ">=0.10"
   }
