--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
   },
   "bundledDependencies": [
   ],
+  "scripts": {
+    "test": "grunt test"
+  },
   "license": "Apache v2 license",
   "engines": {
     "node": ">=0.10"
