--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-config-ngscenario-dsl",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "author": "Hypoport AG",
   "description": "A simple angular-scenario DSL for configuring a node.js backend directly from your E2E tests",
   "contributors": [
@@ -37,8 +37,7 @@
     "jasmine-node": "1.10.x",
     "request": "2.22.x"
   },
-  "bundledDependencies": [
-  ],
+  "bundledDependencies": [],
   "scripts": {
     "test": "grunt test"
   },
